tests/baselines/reference/typeSatisfaction_vacuousIntersectionOfContextualTypes.errors.txt
tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction_vacuousIntersectionOfContextualTypes.ts(1,7): error TS2322: Type '"foo"' is not assignable to type '"baz"'.
tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction_vacuousIntersectionOfContextualTypes.ts(2,7): error TS2322: Type '{ xyz: string; }' is not assignable to type '{ xyz: "baz"; }'.
  Types of property 'xyz' are incompatible.
    Type 'string' is not assignable to type '"baz"'.
tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction_vacuousIntersectionOfContextualTypes.ts(2,29): error TS2322: Type 'string' is not assignable to type '"foo" | "bar"'.


==== tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction_vacuousIntersectionOfContextualTypes.ts (3 errors) ====
    const a: "baz" = "foo" satisfies "foo" | "bar";
          ~
!!! error TS2322: Type '"foo"' is not assignable to type '"baz"'.
    const b: { xyz: "baz" } = { xyz: "foo" } satisfies { xyz: "foo" | "bar" };
          ~
!!! error TS2322: Type '{ xyz: string; }' is not assignable to type '{ xyz: "baz"; }'.
!!! error TS2322:   Types of property 'xyz' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type '"baz"'.
                                ~~~
!!! error TS2322: Type 'string' is not assignable to type '"foo" | "bar"'.
!!! related TS6500 tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction_vacuousIntersectionOfContextualTypes.ts:2:54: The expected type comes from property 'xyz' which is declared here on type '{ xyz: "foo" | "bar"; }'
    